--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,19 @@
 .search-field {
     width: 100% !important;
 }
+
+.probootstrap-main-nav .btn {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.probootstrap-logo {
+    font-size: 27px;
+}
+
+.probootstrap-header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
