--- a/css/custom.css
+++ b/css/custom.css
@@ -10,8 +10,23 @@ body {
     margin-top: 150px;
 }
 
-.flexslider.page-inner, .flexslider.page-inner .slides>li, .flexslider2.page-inner, .flexslider2.page-inner .slides>li {
-    height: 255px;
+.flexslider {
+    height: 650px;
+}
+
+.probootstrap-wrap-banner h1 {
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-left:60px;
+    font-weight: bold;
+}
+
+.probootstrap-wrap-banner h2 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    padding-left:60px;
 }
 
 .probootstrap-main-nav .btn {
@@ -19,6 +34,10 @@ body {
     padding-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
+}
+
+.probootstrap-home-search {
+    margin-top: 50px;
 }
 
 .probootstrap-logo {
@@ -37,8 +56,17 @@ body {
 
 .masthead-img {
     position: absolute;
-    top: -128px;
-    left: 280px; 
+    top: -160px;
+    left: 320px;
+    opacity: 70%;
+}
+
+@media screen and (max-width: 768px) {
+    .masthead-img {
+        top: 31px;
+        left: -7px;
+        opacity: 20%; 
+    }
 }
 
 html .cog-row .cog-col:not(td), :root:root:root:root:root .cog-row .cog-col:not(td) {
